--- a/dl_lab3_inference.ipynb
+++ b/dl_lab3_inference.ipynb
@@ -121,19 +121,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "Special tokens have been added in the vocabulary, make sure the associated word embeddings are fine-tuned or trained.\n",
       "Special tokens have been added in the vocabulary, make sure the associated word embeddings are fine-tuned or trained.\n"
      ]
     }
    ],
    "source": [
-    "pipe = pipeline(\"automatic-speech-recognition\", model=\"AlanRobotics/whisper-tiny-ru\", tokenizer=WhisperTokenizer.from_pretrained(\"openai/whisper-tiny\"))"
+    "original_whisper_pipe = pipeline(\"automatic-speech-recognition\", model=\"openai/whisper-tiny\", tokenizer=WhisperTokenizer.from_pretrained(\"openai/whisper-tiny\"))\n",
+    "finetuned_whisper_pipe = pipeline(\"automatic-speech-recognition\", model=\"AlanRobotics/whisper-tiny-ru\", tokenizer=WhisperTokenizer.from_pretrained(\"openai/whisper-tiny\"))"
    ]
   },
   {
@@ -145,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -181,7 +183,7 @@
     "from moviepy.editor import VideoFileClip\n",
     "\n",
     "# Load the video file\n",
-    "video = VideoFileClip('/Users/a.gazzaev/Desktop/dl_lab3/LLM_and_BLIP/tony.mp4')\n",
+    "video = VideoFileClip('tony.mp4')\n",
     "\n",
     "# Extract the audio\n",
     "audio = video.audio\n",
@@ -192,26 +194,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'Я железный человек.'"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "OpenAI transcription:   I'm a human.\n",
+      "AlanRobotics transcription:  Я железный человек.\n"
+     ]
     }
    ],
    "source": [
     "with open(\"tony.wav\", 'rb') as f:\n",
     "    audio = f.read()\n",
     "\n",
-    "transcription = pipe(audio).get(\"text\")\n",
-    "transcription"
+    "original_whisper_transcription = original_whisper_pipe(audio).get(\"text\")\n",
+    "finetuned_whisper_transcription = finetuned_whisper_pipe(audio).get(\"text\")\n",
+    "\n",
+    "print(\"OpenAI transcription: \", original_whisper_transcription)\n",
+    "print(\"AlanRobotics transcription: \", finetuned_whisper_transcription)"
    ]
   },
   {
@@ -223,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +251,7 @@
     }
    ],
    "source": [
-    "prompt = f\"This is a text description of consecutive frames with timecodes from the video. The video shows only one person. Based on these descriptions, try to briefly tell what is happening on the video? This video also have audio from person on video: {transcription}. Что происходит на видео? Ответь на русском\"\n",
+    "prompt = f\"This is a text description of consecutive frames with timecodes from the video. The video shows only one person. Based on these descriptions, try to briefly tell what is happening on the video? This video also have audio from person on video: {finetuned_whisper_transcription}. Что происходит на видео? Ответь на русском\"\n",
     "res = get_response(prompt=(prompt + prompt_descriptions))\n",
     "print(\"\"\"\n",
     "MODEL RESPONSE: \"\"\", res)"
