--- a/dl_lab3_inference.ipynb
+++ b/dl_lab3_inference.ipynb
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -246,16 +246,23 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "MODEL RESPONSE:  На видео показан один человек, надетый в костюм и галстук. В первых трех кадрах он держит лист бумаги. На четвертом кадре он стоят перед экраном. На пятом и шестом кадрах он смотрит на что-то. На седьмом кадре он смотрит в камеру. На протяжении всего видео он произносит фразу \"Я железный человек\".\n"
+      "MODEL RESPONSE:  На видео можно увидеть мужчину в костюме и галстуке, который держит лист бумаги. Сначала он стоит на одном месте, затем переходит к экрану и смотрит на него. Затем он снова стоит перед экраном и продолжает смотреть на него. На время кодов 5.0 и 6.0 он смотрит на камеру. В конце он стоят перед окном. В течение всего видео мужчина говорит на русском языке: \"Я железный человек\".\n"
      ]
     }
    ],
    "source": [
-    "prompt = f\"This is a text description of consecutive frames with timecodes from the video. The video shows only one person. Based on these descriptions, try to briefly tell what is happening on the video? This video also have audio from person on video: {finetuned_whisper_transcription}. Что происходит на видео? Ответь на русском\"\n",
+    "prompt = f\"This is a text description of consecutive frames with timecodes from the video. Based on these descriptions, try to briefly tell what is happening on the video? This video also have audio from person on video: {finetuned_whisper_transcription}. Что происходит на видео? Ответь на русском\"\n",
     "res = get_response(prompt=(prompt + prompt_descriptions))\n",
     "print(\"\"\"\n",
     "MODEL RESPONSE: \"\"\", res)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
